Imported IO library from old engine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.0)
-set (CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 20)
 
 set(EXTERNAL_INSTALL_LOCATION ${CMAKE_BINARY_DIR}/external)
 set(DBUILD_SHARED_LIBS ON CACHE BOOL "Build as a shared library")
@@ -16,16 +16,16 @@ set(EPSILON_BUILD_LOCATION ${CMAKE_BINARY_DIR})
 #    message (STATUS "_Unwind_Backtrace() not found. Disabling Backtrace support.")
 #endif()
 
-option (BUILD_AS_LIBRARY "Build as a library" ON)
+option(BUILD_AS_LIBRARY "Build as a library" ON)
 
 include(ExternalProject)
 
 #Download and include glm
 ExternalProject_Add(glm
-    GIT_REPOSITORY https://github.com/g-truc/glm.git
-    INSTALL_COMMAND cmake -E echo "Skipping install step."
-    UPDATE_COMMAND ""
-)
+        GIT_REPOSITORY https://github.com/g-truc/glm.git
+        INSTALL_COMMAND cmake -E echo "Skipping install step."
+        UPDATE_COMMAND ""
+        )
 
 ExternalProject_Get_property(glm SOURCE_DIR)
 set(GLM_BUILD_DIR ${SOURCE_DIR})
@@ -36,10 +36,10 @@ include_directories(${GLM_BUILD_DIR})
 
 #Download and include vma
 ExternalProject_Add(vma
-    GIT_REPOSITORY https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator.git
-    INSTALL_COMMAND cmake -E echo "Skipping install step."
-    UPDATE_COMMAND ""
-)
+        GIT_REPOSITORY https://github.com/GPUOpen-LibrariesAndSDKs/VulkanMemoryAllocator.git
+        INSTALL_COMMAND cmake -E echo "Skipping install step."
+        UPDATE_COMMAND ""
+        )
 
 ExternalProject_Get_property(vma SOURCE_DIR)
 set(VMA_BUILD_DIR ${SOURCE_DIR})
@@ -50,12 +50,12 @@ include_directories(${VMA_BUILD_DIR}/include)
 
 #Download and include stb-image
 ExternalProject_Add(stb
-    GIT_REPOSITORY https://github.com/nothings/stb.git
-    INSTALL_COMMAND cmake -E echo "Skipping install step for stb-image."
-    BUILD_COMMAND ""
-    UPDATE_COMMAND ""
-    CONFIGURE_COMMAND ""
-)
+        GIT_REPOSITORY https://github.com/nothings/stb.git
+        INSTALL_COMMAND cmake -E echo "Skipping install step for stb-image."
+        BUILD_COMMAND ""
+        UPDATE_COMMAND ""
+        CONFIGURE_COMMAND ""
+        )
 
 ExternalProject_Get_property(stb SOURCE_DIR)
 set(STB_BUILD_DIR ${SOURCE_DIR})
@@ -81,10 +81,10 @@ include_directories(${BEACON_BUILD_DIR})
 
 # download and include glfw3
 ExternalProject_Add(glfw3_d
-    GIT_REPOSITORY https://github.com/glfw/glfw.git
-    INSTALL_COMMAND cmake -E echo "Skipping install step."
-    UPDATE_COMMAND ""
-)
+        GIT_REPOSITORY https://github.com/glfw/glfw.git
+        INSTALL_COMMAND cmake -E echo "Skipping install step."
+        UPDATE_COMMAND ""
+        )
 
 ExternalProject_Get_property(glfw3_d SOURCE_DIR)
 ExternalProject_Get_property(glfw3_d BINARY_DIR)
@@ -95,13 +95,13 @@ message(${GLFW3_BUILD_DIR})
 include_directories(${SOURCE_DIR}/include)
 link_directories(${GLFW3_BUILD_DIR}/src)
 
-SET(HEADERS 
-    ${HEADERS}
-    ${CMAKE_SOURCE_DIR}
-    ${CMAKE_SOURCE_DIR}/framework
-    ${CMAKE_SOURCE_DIR}/vk
-    ${CMAKE_SOURCE_DIR}/engine
-)
+SET(HEADERS
+        ${HEADERS}
+        ${CMAKE_SOURCE_DIR}
+        ${CMAKE_SOURCE_DIR}/framework
+        ${CMAKE_SOURCE_DIR}/vk
+        ${CMAKE_SOURCE_DIR}/engine
+        )
 
 INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
 
@@ -109,28 +109,48 @@ option(CREATE_STATIC_LIB "Build static library" OFF)
 
 project(Epsilon VERSION 0.1.0)
 
-if(BUILD_AS_LIBRARY)
+if (BUILD_AS_LIBRARY)
 
-    if(CREATE_STATIC_LIB)
+    if (CREATE_STATIC_LIB)
         add_library(${PROJECT_NAME} STATIC main_lib.cpp)
-    else()
+    else ()
         add_library(${PROJECT_NAME} SHARED main_lib.cpp)
-    endif()
+    endif ()
 
-    if(MSVC)
+    if (MSVC)
         target_compile_options(${PROJECT_NAME} PRIVATE /W4 /WX)
-    else()
+    else ()
         target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic)
-    endif()
-else()
-    add_executable(${PROJECT_NAME} main.cpp engine/renderer/drawables/primitives/quad.hpp framework/app.hpp)
-endif()
+    endif ()
+else ()
+    add_executable(${PROJECT_NAME} main.cpp
+            engine/renderer/drawables/primitives/quad.hpp
+            framework/app.hpp
+            framework/IO/IO.hpp
+            framework/IO/KeyBoard.cpp
+            framework/IO/KeyBoard.hpp
+            framework/IO/KeyboardWrapper.hpp
+            framework/IO/Mouse.hpp
+            framework/IO/Joystick/Joystick.hpp
+            framework/IO/Joystick/JoystickWrapper.hpp
+            framework/IO/Joystick/Mappings.hpp
+            framework/IO/IO.cpp)
+endif ()
 
 target_sources(${PROJECT_NAME} PUBLIC
-    ${CMAKE_SOURCE_DIR}/framework/env.cpp
-    ${CMAKE_SOURCE_DIR}/engine/renderer/vulkan/vulkan_impl.cpp
-    ${CMAKE_SOURCE_DIR}/engine/renderer/vulkan/vulkan.cpp
-    ${CMAKE_SOURCE_DIR}/engine/renderer/vulkan/resource_manager.cpp)
+        ${CMAKE_SOURCE_DIR}/framework/env.cpp
+        ${CMAKE_SOURCE_DIR}/engine/renderer/vulkan/vulkan_impl.cpp
+        ${CMAKE_SOURCE_DIR}/engine/renderer/vulkan/vulkan.cpp
+        ${CMAKE_SOURCE_DIR}/engine/renderer/vulkan/resource_manager.cpp
+        ${CMAKE_SOURCE_DIR}/framework/IO/IO.hpp
+        ${CMAKE_SOURCE_DIR}/framework/IO/KeyBoard.cpp
+        ${CMAKE_SOURCE_DIR}/framework/IO/KeyBoard.hpp
+        ${CMAKE_SOURCE_DIR}/framework/IO/KeyboardWrapper.hpp
+        ${CMAKE_SOURCE_DIR}/framework/IO/Mouse.hpp
+        ${CMAKE_SOURCE_DIR}/framework/IO/Joystick/Joystick.hpp
+        ${CMAKE_SOURCE_DIR}/framework/IO/Joystick/JoystickWrapper.hpp
+        ${CMAKE_SOURCE_DIR}/framework/IO/Joystick/Mappings.hpp
+        ${CMAKE_SOURCE_DIR}/framework/IO/IO.cpp)
 
 find_package(Vulkan REQUIRED)
 target_link_libraries(${PROJECT_NAME} PRIVATE ${Vulkan_LIBRARIES})
@@ -142,7 +162,7 @@ add_dependencies(${PROJECT_NAME} glfw3_d)
 add_dependencies(${PROJECT_NAME} glm)
 add_dependencies(${PROJECT_NAME} beacon)
 add_dependencies(${PROJECT_NAME} stb)
-target_link_libraries(${PROJECT_NAME} PUBLIC ${CMAKE_DL_LIBS}) 
+target_link_libraries(${PROJECT_NAME} PUBLIC ${CMAKE_DL_LIBS})
 
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
@@ -155,19 +175,19 @@ set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
 
-execute_process (
-    COMMAND bash -c ${CMAKE_SOURCE_DIR}/build_shaders.sh
-    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-    OUTPUT_VARIABLE outVar
+execute_process(
+        COMMAND bash -c ${CMAKE_SOURCE_DIR}/build_shaders.sh
+        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+        OUTPUT_VARIABLE outVar
 )
 
 #execute_process(
 #    COMMAND mkdir -p ${PROJECT_BINARY_DIR}/examples/assets/shaders/
 #)
 
-install(DIRECTORY "./assets/shaders/" 
+install(DIRECTORY "./assets/shaders/"
         DESTINATION ${PROJECT_BINARY_DIR}/examples/assets/shaders/
-        FILES_MATCHING PATTERN "*.spv" )
+        FILES_MATCHING PATTERN "*.spv")
 
 
 #add_subdirectory(examples/basic)
