--- a/examples/chess/CMakeLists.txt
+++ b/examples/chess/CMakeLists.txt
@@ -19,7 +19,12 @@ message (STATUS "location of vulkan libs: " ${Vulkan_LIBRARIES})
 #        ${CMAKE_SOURCE_DIR}/engine/renderer/vulkan/resource_manager.cpp)
 
 add_dependencies(${PROJECT_NAME} Epsilon)
+
+    if (MSVC)
+target_link_libraries(${PROJECT_NAME} LINK_PUBLIC Epsilon)
+    else()
 target_link_libraries(${PROJECT_NAME} PUBLIC ${EPSILON_BUILD_LOCATION}/libEpsilon.so)
+endif()
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR})
 
 target_link_libraries(${PROJECT_NAME} PUBLIC ${Vulkan_LIBRARIES})
