--- a/platform/android/app/src/main/cpp/CMakeLists.txt
+++ b/platform/android/app/src/main/cpp/CMakeLists.txt
@@ -21,7 +21,8 @@ add_library( # Sets the name of the library.
         SHARED
 
         # Provides a relative path to your source file(s).
-        native-lib.cpp)
+        native-lib.cpp
+        AndroidApp.cpp)
 
 # Searches for a specified prebuilt library and stores the path as a
 # variable. Because CMake includes system libraries in the search path by
@@ -39,6 +40,7 @@ find_library( # Sets the name of the path variable.
 # Specifies libraries CMake should link to your target library. You
 # can link multiple libraries, such as libraries you define in this
 # build script, prebuilt third-party libraries, or system libraries.
+#add_subdirectory(../../../../../../ ../../../../../../build EXCLUDE_FROM_ALL)
 
 target_link_libraries( # Specifies the target library.
         epsilon
