--- a/examples/bsp/CMakeLists.txt
+++ b/examples/bsp/CMakeLists.txt
@@ -13,19 +13,31 @@ message(STATUS "location of vulkan libs: " ${Vulkan_LIBRARIES})
 
 add_dependencies(${PROJECT_NAME} Epsilon)
 
-if (MSVC)
-    target_link_libraries(${PROJECT_NAME} LINK_PUBLIC Epsilon)
-else ()
-    target_link_libraries(${PROJECT_NAME} PUBLIC ${EPSILON_BUILD_LOCATION}/libEpsilon.so)
-endif ()
+if (BUILD_AS_LIBRARY)
+    if (MSVC)
+        target_link_libraries(${PROJECT_NAME} LINK_PUBLIC Epsilon)
+    else ()
+        target_link_libraries(${PROJECT_NAME} PUBLIC ${EPSILON_BUILD_LOCATION}/libEpsilon.so)
+    endif ()
+else()
+    target_sources(${PROJECT_NAME} PUBLIC ${PROJECT_FILES})
+endif()
+
+
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR})
 
 target_link_libraries(${PROJECT_NAME} PUBLIC ${Vulkan_LIBRARIES})
 target_include_directories(${PROJECT_NAME} PUBLIC ${Vulkan_INCLUDE_DIR})
 
 target_link_libraries(${PROJECT_NAME} PRIVATE glfw3)
+
+target_link_libraries(${PROJECT_NAME} PRIVATE ${Mono_LINK_LIBRARIES})
+target_include_directories(${PROJECT_NAME} PRIVATE ${Mono_INCLUDE_DIRS})
+
+if(DBUILD_ANDROID EQUAL 0)
 target_link_libraries(${PROJECT_NAME} PRIVATE assimp)
 target_link_libraries(${PROJECT_NAME} PRIVATE openal)
+endif()
 target_link_libraries(${PROJECT_NAME} PUBLIC ${CMAKE_DL_LIBS})
 
 
