--- a/examples/chess/CMakeLists.txt
+++ b/examples/chess/CMakeLists.txt
@@ -9,6 +9,8 @@ add_executable(${PROJECT_NAME} chess.hpp main.cpp UCI.hpp chess.cpp game/player.
 
 target_sources(${PROJECT_NAME} PRIVATE main.cpp)
 
+target_link_libraries(${PROJECT_NAME} PRIVATE ${Mono_LINK_LIBRARIES})
+target_include_directories(${PROJECT_NAME} PRIVATE ${Mono_INCLUDE_DIRS})
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
