--- a/platform/android/app/build.gradle
+++ b/platform/android/app/build.gradle
@@ -41,8 +41,8 @@ android {
     }
     externalNativeBuild {
         cmake {
-            //path file('src/main/cpp/CMakeLists.txt')
-            path file('../../../CMakeLists.txt')
+            path file('src/main/cpp/CMakeLists.txt')
+            //path file('../../../CMakeLists.txt')
             version '3.22.1'
         }
     }
