--- a/examples/bsp/CMakeLists.txt
+++ b/examples/bsp/CMakeLists.txt
@@ -14,11 +14,16 @@ message(STATUS "location of vulkan libs: " ${Vulkan_LIBRARIES})
 add_dependencies(${PROJECT_NAME} Epsilon)
 
 if (BUILD_AS_LIBRARY)
+if(WIN32)
     if (MSVC)
         target_link_libraries(${PROJECT_NAME} LINK_PUBLIC Epsilon)
     else ()
-        target_link_libraries(${PROJECT_NAME} PUBLIC ${EPSILON_BUILD_LOCATION}/libEpsilon.so)
-    endif ()
+        target_link_libraries(${PROJECT_NAME} LINK_PUBLIC Epsilon)
+    endif()
+else ()
+    target_link_libraries(${PROJECT_NAME} PUBLIC ${EPSILON_BUILD_LOCATION}/libEpsilon.so)
+    #  target_link_libraries(${PROJECT_NAME} PUBLIC Epsilon)
+endif ()
 else()
     target_sources(${PROJECT_NAME} PUBLIC ${PROJECT_FILES})
 endif()
@@ -35,8 +40,13 @@ target_link_libraries(${PROJECT_NAME} PRIVATE ${Mono_LINK_LIBRARIES})
 target_include_directories(${PROJECT_NAME} PRIVATE ${Mono_INCLUDE_DIRS})
 
 if(DBUILD_ANDROID EQUAL 0)
-target_link_libraries(${PROJECT_NAME} PRIVATE assimp)
+if(WIN32)
+target_link_libraries(${PROJECT_NAME} PRIVATE openal32)
+target_link_libraries(${PROJECT_NAME} PRIVATE assimp-5.dll)
+else()
 target_link_libraries(${PROJECT_NAME} PRIVATE openal)
+target_link_libraries(${PROJECT_NAME} PRIVATE assimp)
+endif()
 endif()
 target_link_libraries(${PROJECT_NAME} PUBLIC ${CMAKE_DL_LIBS})
 
