--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,12 @@
 /modules/dotnet/lib/bin
 /modules/dotnet/lib/obj
 /modules/dotnet/lib
+
 /modules/mono/test
 cmake-build-debug-coverage/
 cmake-build-release/
 
 CMakeSettings.json
 assets/shaders/fragment.spv
+modules/dotnet/lib/EpsilonNET.csproj
+modules/dotnet/lib/Program.cs
