--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 *.bsp
 *.zip
 
+Epsilon
+
 /.idea
 /thirdparty
 /.vscode
@@ -17,7 +19,7 @@
 /assets/models/hl2
 /assets/models/portal
 /modules/dotnet/lib
-
+/docs
 /modules/mono/test
 cmake-build-debug-coverage/
 cmake-build-release/
