--- a/examples/model/CMakeLists.txt
+++ b/examples/model/CMakeLists.txt
@@ -11,15 +11,24 @@ target_sources(${PROJECT_NAME} PRIVATE main.cpp)
 message(STATUS "location of epsilon build: " ${EPSILON_BUILD_LOCATION})
 message(STATUS "location of vulkan libs: " ${Vulkan_LIBRARIES})
 
-if(BUILD_ANDROID EQUAL 0)
 add_dependencies(${PROJECT_NAME} Epsilon)
-endif()
 
-if (MSVC)
-    target_link_libraries(${PROJECT_NAME} LINK_PUBLIC Epsilon)
+if (BUILD_AS_LIBRARY)
+if(WIN32)
+    if (MSVC)
+        target_link_libraries(${PROJECT_NAME} LINK_PUBLIC Epsilon)
+    else ()
+        target_link_libraries(${PROJECT_NAME} LINK_PUBLIC Epsilon)
+    endif()
 else ()
     target_link_libraries(${PROJECT_NAME} PUBLIC ${EPSILON_BUILD_LOCATION}/libEpsilon.so)
+    #  target_link_libraries(${PROJECT_NAME} PUBLIC Epsilon)
 endif ()
+else()
+    target_sources(${PROJECT_NAME} PUBLIC ${PROJECT_FILES})
+endif()
+
+
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_SOURCE_DIR})
 
 target_link_libraries(${PROJECT_NAME} PUBLIC ${Vulkan_LIBRARIES})
@@ -27,8 +36,17 @@ target_include_directories(${PROJECT_NAME} PUBLIC ${Vulkan_INCLUDE_DIR})
 
 target_link_libraries(${PROJECT_NAME} PRIVATE glfw3)
 
-if(!BUILD_ANDROID)
+target_link_libraries(${PROJECT_NAME} PRIVATE ${Mono_LINK_LIBRARIES})
+target_include_directories(${PROJECT_NAME} PRIVATE ${Mono_INCLUDE_DIRS})
+
+if(DBUILD_ANDROID EQUAL 0)
+if(WIN32)
+target_link_libraries(${PROJECT_NAME} PRIVATE openal32)
+target_link_libraries(${PROJECT_NAME} PRIVATE assimp-5.dll)
+else()
+target_link_libraries(${PROJECT_NAME} PRIVATE openal)
 target_link_libraries(${PROJECT_NAME} PRIVATE assimp)
+endif()
 endif()
 target_link_libraries(${PROJECT_NAME} PUBLIC ${CMAKE_DL_LIBS})
 
