--- a/imgui.ini
+++ b/imgui.ini
@@ -4,28 +4,38 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=108,91
-Size=339,180
+Pos=145,328
+Size=407,280
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=621,33
-Size=550,680
+Pos=871,14
+Size=358,680
 Collapsed=0
 
 [Window][Dear ImGui Style Editor]
-Pos=213,65
+Pos=121,108
 Size=353,544
 Collapsed=0
 
 [Window][Another Window]
-Pos=60,60
-Size=198,71
+Pos=54,373
+Size=279,203
 Collapsed=0
 
 [Window][Example: Property editor]
 Pos=60,60
 Size=430,450
+Collapsed=0
+
+[Window][Dear ImGui Metrics/Debugger]
+Pos=54,653
+Size=346,307
+Collapsed=0
+
+[Window][Dear ImGui Debug Log]
+Pos=31,306
+Size=541,558
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
