added new imgui debug window

--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=9,435
+Pos=45,149
 Size=407,280
 Collapsed=0
 
@@ -36,6 +36,11 @@ Collapsed=0
 [Window][Dear ImGui Debug Log]
 Pos=31,306
 Size=541,558
+Collapsed=0
+
+[Window][##transparentWindow]
+Pos=0,0
+Size=1280,720
 Collapsed=0
 
 [Table][0xD0F0C6E3,2]
