--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -268,9 +268,13 @@ if (BUILD_AS_LIBRARY)
     endif ()
 
     if (MSVC)
-        target_compile_options(${PROJECT_NAME} PRIVATE /W2)
+        target_compile_options(${PROJECT_NAME} PRIVATE /W0)
     else ()
         #target_compile_options(${PROJECT_NAME} PRIVATE -Wall -Wextra -Wpedantic)
+         set(CMAKE_EXE_LINKER_FLAGS "-static-libstdc++")
+         #set(CMAKE_SHARED_LINKER_FLAGS "-static-libgcc -static-libstdc++ -lstdc++")
+         #set(CMAKE_MODULE_LINKER_FLAGS "-Bstatic -static -static-libgcc -static-libstdc++ -lstdc++")
+        # target_compile_options(${PROJECT_NAME} PUBLIC -Bstatic -static -static-libgcc -static-libstdc++ -lstdc++)
     endif ()
 else ()
     add_executable(${PROJECT_NAME} main.cpp
@@ -303,7 +307,7 @@ if(BUILD_ANDROID EQUAL 0)
 target_link_libraries(${PROJECT_NAME} PRIVATE assimp)
 endif()
 if(WIN32)
-target_link_libraries(${PROJECT_NAME} PRIVATE openal32)
+target_link_libraries(${PROJECT_NAME} PRIVATE OpenAL32.dll)
 else()
 target_link_libraries(${PROJECT_NAME} PRIVATE openal)
 endif()
@@ -327,7 +331,11 @@ target_link_libraries(${PROJECT_NAME} PUBLIC ${CMAKE_DL_LIBS})
 set(THREADS_PREFER_PTHREAD_FLAG ON)
 find_package(Threads REQUIRED)
 target_link_libraries(${PROJECT_NAME} PRIVATE Threads::Threads)
-target_link_libraries(${PROJECT_NAME} PUBLIC -rdynamic)
+
+if(!WIN32) 
+        target_link_libraries(${PROJECT_NAME} PUBLIC -rdynamic)
+endif()
+
 
 #add_dependencies(${PROJECT_NAME} LearningVulkan)
 #
